feat(cozy-keys-lib): Unlock component style

--- a/packages/cozy-keys-lib/package.json
+++ b/packages/cozy-keys-lib/package.json
@@ -19,12 +19,13 @@
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
-    "cozy-ui": "22.10.0",
+    "babel-plugin-inline-react-svg": "^1.1.0",
+    "cozy-ui": "22.12.0",
     "enzyme-to-json": "3.3.5",
     "jest": "24.8.0",
     "react": "^16.8.3"
   },
   "peerDependencies": {
-    "cozy-ui": "^22.10.0"
+    "cozy-ui": "^22.12.0"
   }
 }
