--- a/packages/cozy-harvest-lib/package.json
+++ b/packages/cozy-harvest-lib/package.json
@@ -35,6 +35,7 @@
     "preact-portal": "^1.1.3",
     "react-final-form": "3.7.0",
     "react-markdown": "4.0.8",
+    "react-router-dom": "^5.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
