--- a/packages/cozy-harvest-lib/package.json
+++ b/packages/cozy-harvest-lib/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.2",
+    "@material-ui/core": "3",
     "cozy-doctypes": "^1.63.7",
     "cozy-keys-lib": "^1.2.2",
     "date-fns": "^1.30.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@babel/cli": "7.2.3",
     "babel-jest": "24.1.0",
+    "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-preset-cozy-app": "^1.6.0",
     "cozy-client": "6.61.0",
     "cozy-device-helper": "^1.7.5",
