--- a/packages/cozy-harvest-lib/package.json
+++ b/packages/cozy-harvest-lib/package.json
@@ -47,6 +47,7 @@
     "babel-preset-cozy-app": "^1.6.0",
     "cozy-client": "6.61.0",
     "cozy-device-helper": "^1.7.5",
+    "cozy-keys-lib": "1.2.2",
     "cozy-realtime": "3.1.0",
     "cozy-ui": "22.12.0",
     "enzyme": "3.10.0",
@@ -62,6 +63,7 @@
   "peerDependencies": {
     "cozy-client": "6.61.0",
     "cozy-device-helper": "1.7.1",
+    "cozy-keys-lib": "^1.2.2",
     "cozy-realtime": "^3.1.0",
     "cozy-ui": "^22.12.0"
   }
