--- a/packages/cozy-scanner/package.json
+++ b/packages/cozy-scanner/package.json
@@ -16,7 +16,7 @@
     "build": "yarn run copy-files && env BABEL_ENV=transpilation yarn babel src/ --out-dir dist",
     "copy-files": "cp -rf src/locales dist/",
     "prepublishOnly": "yarn build",
-    "test": "jest test/ --verbose",
+    "test": "jest src/ --verbose",
     "lint": "cd .. && yarn lint packages/cozy-scanner",
     "tx": "tx pull --all",
     "watch": "yarn build --watch"
@@ -26,8 +26,13 @@
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
+    "@testing-library/jest-dom": "^4.1.2",
+    "@testing-library/react": "^9.3.0",
+    "babel-jest": "^24.9.0",
     "babel-preset-cozy-app": "^1.7.0",
+    "cozy-ui": "^25.7.0",
     "jest": "24.1.0",
+    "jest-dom": "^4.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -36,6 +41,19 @@
   "peerDependencies": {
     "cozy-client": "7.4.1",
     "cozy-ui": "^25.7.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)?$": "<rootDir>/babel-transformer.js"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!cozy-ui)"
+    ],
+    "moduleNameMapper": {
+      "styles.styl": "identity-obj-proxy",
+      "\\.(png|gif|jpe?g|svg)$": "<rootDir>/test/__mocks__/fileMock.js",
+      "^cozy-client$": "cozy-client/dist/index.js"
+    }
   },
   "sideEffects": false
 }
