--- a/packages/cozy-scanner/package.json
+++ b/packages/cozy-scanner/package.json
@@ -36,11 +36,13 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "stylus": "^0.54.7"
+    "stylus": "^0.54.7",
+    "cozy-doctypes": "1.67.0"
   },
   "peerDependencies": {
     "cozy-client": "7.4.1",
-    "cozy-ui": "^25.7.0"
+    "cozy-ui": "^25.7.0",
+    "cozy-doctypes": "1.67.0"
   },
   "jest": {
     "transform": {
